# ynet

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: apk.yaml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
src/: main.py
src/assets/animations/: down_arrow.json
src/assets/lottie/: no_internet.json
src/lib/: app.py  constant.py
src/lib/models/: base.py  user.py
src/lib/scrapper/: __init__.py  adsl.py  base.py  lte.py  phone.py
src/lib/views/: bottom_bar.py  cards.py  tab_switch.py
src/lib/views/card/: __init__.py  card.py  credit.py  item.py  list_tile.py  title.py
src/lib/views/card/atypes/: __init__.py  adsl.py  lte.py  phone.py
src/lib/views/dialogs/: __init__.py  about.py  captcha_verify.py  credit_card.py  edit_user.py  new_user.py  theme.py  user.py
src/lib/views/list_user/: __init__.py  list_tile.py  list_view.py
src/src/lib/: constant.py
src/src/lib/models/: base.py
src/src/lib/views/card/: item.py
src/src/lib/views/card/atypes/: __init__.py  adsl.py  phone.py
src/src/lib/views/dialogs/: __init__.py  credit_card.py  edit_user.py  theme.py  user.py
src/src/lib/views/list_user/: __init__.py  list_tile.py
