[tool.poetry]
name = "ynet"
version = "14.0.0"
description = "Yemen Net Internet Services"
authors = ["Osama Mohammed <omamkaz@gmail.com>"]
readme = "README.md"


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.omamkaz"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "ynet"

# company name to display in about app dialogs
company = "omamkaz"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by omamkaz"

build_number = 14


[tool.flet.flutter]
build_args = ["--release", "--analyze-size", "--target-platform", "android-arm"] # android-arm64
dependencies = ["flet_lottie"]


[tool.flet.compile]
app = true
packages = true
cleanup = true


[tool.flet.android]
split_per_abi = true
build_arch = "armeabi-v7a" # arm64-v8a
adaptive_icon_background = "#003374"


[tool.flet.app]
path = "src"
exclude = ["media", "fastlane", "assets/animations", ".github", ".git"]


[tool.poetry.dependencies]
python = ">=3.10,<4"
flet = "0.25.2"
bs4 = "0.0.2"
requests = "2.32.3"
humanize = "4.10.0"
pydal = "20241201.2"


[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.25.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
