[project]
name = "ynet"
version = "13.0.0"
description = "Yemen Net Internet Services"
authors = ["Osama Mohammed <omamkaz@gmail.com>"]
readme = "README.md"
dependencies = [
    "flet-lottie",
    "flet==0.26.0",
    "bs4==0.0.2",
    "requests==2.32.3",
    "humanize==4.10.0",
    "pydal==20241201.2"
]


[tool.flet]
org = "com.omamkaz"
product = "ynet"
company = "omamkaz"
copyright = "Copyright (C) 2024 by omamkaz"
build_number = 13


[tool.flet.flutter]
build_args = ["--release", "--analyze-size", "--target-platform", "android-arm"] # android-arm64
# dependencies = ["flet_lottie"]


[tool.flet.compile]
app = true
packages = true
cleanup = true


[tool.flet.android]
split_per_abi = true
build_arch = "armeabi-v7a" # arm64-v8a
adaptive_icon_background = "#003374"


[tool.flet.app]
path = "src"
exclude = ["media", "fastlane", "assets/animations", ".github", ".git"]


# [tool.poetry.dependencies]
# python = ">=3.10,<4"
# flet = "0.26.0"
# bs4 = "0.0.2"
# requests = "2.32.3"
# humanize = "4.10.0"
# pydal = "20241201.2"
# flet-lottie = "0.1.0"


[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.26.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
