[project]
name = "ynet"
version = "14.0.0"
description = "Yemen Net Internet Services"
readme = "README.md"
authors = [
    { name = "Osama Mohammed", email = "omamkaz@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "flet-lottie",
    "flet==0.26.0",
    "bs4==0.0.2",
    "requests==2.32.3",
    "humanize==4.10.0",
    "pydal==20241201.2"
]


[tool.flet]
org = "com.omamkaz"
product = "ynet"
company = "omamkaz"
copyright = "Copyright (C) 2024 by omamkaz"
build_number = 14


[tool.flet.flutter]
build_args = ["--release", "--analyze-size", "--target-platform", "android-arm"] # android-arm64


[tool.flet.compile]
app = true
packages = true
cleanup = true


[tool.flet.android]
split_per_abi = true
build_arch = "armeabi-v7a" # arm64-v8a
adaptive_icon_background = "#003374"


[tool.flet.app]
path = "src"
exclude = ["media", "fastlane", "assets/animations", ".github", ".git"]


[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.26.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false